@@ -1,6 +1,10 @@
 # ChangeLog for media-video/handbrake
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  26 May 2012; Ben de Groot <yngwin@gentoo.org> handbrake-0.9.5_p4039.ebuild,
+  handbrake-0.9.5_p4210.ebuild:
+  Add slot for net-libs/webkit-gtk dep, as reported on forums
 
 *handbrake-0.9.5_p4210 (09 Sep 2011)
 
